# task_Solana_2026

./: Anchor.toml  README.md  package-lock.json  package.json
programs/crafting/: Cargo.toml
programs/crafting/src/: lib.rs
programs/item-nft/: Cargo.toml
programs/item-nft/src/: lib.rs
programs/magic-token/: Cargo.toml
programs/magic-token/src/: lib.rs
programs/marketplace/: Cargo.toml
programs/marketplace/src/: lib.rs
programs/resource-manager/: Cargo.toml
programs/resource-manager/src/: lib.rs
programs/search/: Cargo.toml
programs/search/src/: lib.rs
tests/: cossack_business.ts
