[package]
name = "magic-token"
version = "0.1.0"
description = "MagicToken Program - SPL Token-2022 that can only be minted via Marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "magic_token"
[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
[dependencies]
anchor-lang = { version = "0.30.1" }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
spl-token-2022 = "3.0.4"
