[package]
name = "resource-manager"
version = "0.1.0"
description = "Resource Manager - manages minting/burning of SPL Token-2022 resources"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "resource_manager"
[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
