[package]
name = "search"
version = "0.1.0"
description = "Search Program - allows players to find random resources every 60 seconds"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
[dependencies]
anchor-lang = { version = "0.30.1" }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
resource-manager = { path = "../resource-manager", features = ["cpi"] }
